syntax = "proto3";
package identities.transactions.define;

import "schema/ids/base/identityID.v1.proto";
import "schema/lists/base/propertyList.v1.proto";

message Message {
  string from = 1;
  ids.IdentityID from_i_d = 2;
  lists.PropertyList immutable_meta_properties = 3;
  lists.PropertyList immutable_properties = 4;
  lists.PropertyList mutable_meta_properties = 5;
  lists.PropertyList mutable_properties = 6;
}